syntax = "proto3";

option csharp_namespace = "MicroOrders.Protos";
option java_multiple_files = true;
package orders;

import "google/protobuf/empty.proto";

service Products {
  rpc List(google.protobuf.Empty) returns (ProductListReply);
  
  rpc Get(ProductRequest.Id) returns (ProductReply);
}

message ProductRequest {
  message Id {
    int32 id = 1;
  }
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message ProductReply {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message ProductListReply {
  repeated ProductReply productList = 1;
}